// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Header renders with subtitle 1`] = `
<DocumentFragment>
  <header
    class="header"
  >
    <img
      alt="alt"
      src="src"
    />
    <div
      class="header__content"
    >
      <div
        class="container"
      >
        <div
          class="header__contentInner"
        >
          <h1
            class="display-1"
          >
            title
          </h1>
          <p
            class="lead"
          >
            subtitle
          </p>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Header renders without subtitle 1`] = `
<DocumentFragment>
  <header
    class="header"
  >
    <img
      alt="alt"
      src="src"
    />
    <div
      class="header__content"
    >
      <div
        class="container"
      >
        <div
          class="header__contentInner"
        >
          <h1
            class="display-1"
          >
            title
          </h1>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;
